--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta property="og:title" content="like">
 <meta property="og:description" content="relax">
-<meta property="og:image" content="http://opeterburge.ru/images/photo_gallery/Nazvanija_ulic/Z/zagorodnyj-prospekt/001.jpg">
+<meta property="og:image" content="http://s2.fotokto.ru/photo/full/313/3135897.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
