--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta property="og:title" content="like">
-<meta property="og:description" content="relax">
-<meta property="og:image" content="http://s2.fotokto.ru/photo/full/313/3135897.jpg">
+  <meta property="og:title" content="+5 cm dalam 12 hari">
+<meta property="og:description" content="informasi lebih lanjut di situs">
+<meta property="og:image" content="https://i.ibb.co/XSHTSh1/5-cm-dalam-12-hari-6.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
